--- a/main.css
+++ b/main.css
@@ -1,74 +1,60 @@
-/*xs*/@media screen and (max-width: 576px) {
-#header {height: 400px!important;
-background:;}
-.navbar {}
+/*xs*/
+@media screen and (max-width: 576px){
+#header {height: 400px!important;}
+.navbar {float:right; text-align:center; display:block;}
 #titre {height: 250px!important;}
-#modern {font-size: 1.8rem!important;}
+#titre h1 {font-size: 1.8rem!important;}
 #desk {display: none;}
-#we_offer h2 {font-size: 1.1rem;}
+#offer h2 {font-size: 1.1rem;}
+#video {height: 300px!important;}
 #video h1 {font-size: 1.5rem;}
 #blog h1 {font-size: 1.3rem;}
-#post1 {width: 18rem;
-  margin-left: auto!important;
-  margin-right: auto!important;}
-#post2 {width: 18rem;
-  margin-left: auto!important;
-  margin-right: auto!important;}
-#post3 {width: 18rem;
-  margin-left: auto!important;
-  margin-right: auto!important;}
-#pub {height: 200px;}
-#adv h1 {font-size: 1.3rem;
-margin-bottom: 5px;}
-#adv p {display: none;}
-#adv a {width: 140px;}
+.card {width: 18rem; margin: 25px auto!important;}
+.card-title {font-size: 1.5rem;}
+#pub {height: 300px!important;}
+#pub h1 {font-size: 1.3rem; margin-bottom: 5px;}
+#pub p {display: none;}
+#pub a {width: 140px;}
 #brand p {font-size: 0.8rem;}
-#footer {font-size: 0.7rem;}
-#footer p {}
-}
+#footer {font-size: 0.7rem;}}
 
-/*small*/@media screen and (min-width: 577px) and (max-width: 768px) {
+/*small*/
+@media screen and (min-width: 577px) and (max-width: 768px){
 #header {height: 550px!important;}
 #titre {height: 400px!important;}
-#modern {font-size: 2.2rem!important;}
+#titre h1 {font-size: 2.2rem!important;}
 #sections p {font-size: 0.8rem!important;}
+#offer h2 {font-size: 1.5rem;}
 #desk {display: none;}
-#we_offer h2 {font-size: 1.5rem;}
 #blog h1 {font-size: 1.8rem;}
+.card-deck {display: block;}
+.card {width: 30rem; margin: 25px auto!important;}
 #pub {height:300px!important;}
-#adv h1 {font-size: 1.6rem;}
-#footer {font-size: 0.8rem;}
-}
+#pub h1 {font-size: 1.6rem;}
+#footer {font-size: 0.8rem;}}
 
-/*medium*/@media screen and (min-width: 769px) and (max-width: 992px){
+/*medium*/
+@media screen and (min-width: 769px) and (max-width: 992px){
   #header {height: 600px!important;}
-  #modern {font-size: 2.5rem!important;}
-  #we_offer h2 {font-size: 1.5rem;}
+  #titre h1 {font-size: 2.5rem!important;}
+  #offer h2 {font-size: 1.5rem;}
   .card-title {font-size: 1.3rem;}
   .card-text {font-size: 0.9rem;}
-  #adv h1 {font-size: 1.8rem;}
+  #pub h1 {font-size: 1.8rem;}
   #brand p {font-size: 0.9rem;}
-  #footer {font-size: 0.9rem;}
-  }
+  #footer {font-size: 0.9rem;}}
 
-/*large*/@media screen and (min-width: 993px) and (max-width: 1200px) {
-  #adv h1 {font-size: 2rem;}
-    }
+/*large*/
+@media screen and (min-width: 993px) and (max-width: 1200px){#pub h1 {font-size: 2rem;} .card-title {font-size: 1.8rem;}}
 
-/*xl*/s@media screen and (min-width: 1201px) {}
-
-body {text-align: center;
-font-family: 'Comfortaa', cursive;}
-
-a:hover {color: rgb(40,234,137);}
-span {color: rgb(40,234,137);}
-
-.logo {float: left;}
-
-nav {float: right;
-font-size: 1.25rem;}
-
+body {text-align: center; font-family: 'Comfortaa', cursive;}
+a:hover, span {color: rgb(40,234,137);}
+nav {float: right; font-size: 1.25rem;}
 nav a {color: white;}
+
+.bg-mint {background-color: rgb(40,234,137);}
+.bg-darkblue {background-color: rgb(43,45,60);}
+.middle {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
 
 #header {background-image: url("background.jpg");
 background-repeat: no-repeat;
@@ -76,59 +62,25 @@ background-attachment: fixed;
 background-size: cover;
 height: 650px;
 position: relative;}
-
+#logo {float: left;}
 #titre {height: 450px;}
 
-#modern {font-size: 3rem;}
-
 #sections {font-size: 1rem;}
-
+#sections h2 {font-size: 1.5rem;}
+#sections p {color: rgb(40,234,137);}
 #section1 {background-color: rgb(52,84,99);}
-#section1 h2 {font-size: 1.5rem;}
-#section1 p {color: rgb(40,234,137);}
 
-#section2 {background-color: rgb(43,45,60);}
-#section2 h2 {font-size: 1.5rem;}
-#section2 p {color: rgb(40,234,137);}
-
-#section3 h2 {font-size: 1.5rem;}
-#section3 p {color: rgb(40,234,137);}
-
-
-#we_offer li {list-style-image: url("puce.png");
+#offer ul {margin-top: 1.5rem;}
+#offer li {list-style-image: url("puce.png");
 padding-bottom: 0.6em;}
+#offer a {margin-top: 1rem;}
 
-#we_offer ul {margin-top: 1.5rem;}
-
-#desk {background-image: url("desk1_img.jpg");
-background-size: cover;
-height: auto;}
-
-#learnmore {background-color: rgb(40,234,137);
-margin-top: 1rem;}
+#desk {background-image: url("desk_img.jpg");
+background-size: cover;}
 
 #video {background-image: url("mountain5_img");
-height: 400px;
-position: relative;}
-
-#watch {position: absolute;
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%);}
-
-#playnow {background-color: rgb(40,234,137);}
-
-#blog {background-color: rgb(40,234,137);}
-
-#pub {position: relative;
-background-color: rgb(42,45,60);
+position: relative;
 height: 400px;}
 
-#adv {position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);}
-
-#start {background-color: rgb(40,234,137);}
-
-#footer {background-color: rgb(42,45,60);}
+#pub {position: relative;
+height: 400px;}
